<?xml version="1.0"?>

<package format="2">
  <name>ros_sockets_msgs</name>
  <version>0.0.0</version>
  <description>
    The ros_sockets_msgs package.
  </description>
  <maintainer email="jake.levy@utexas.edu">Jacob Levy</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  
</package>